# py-hid-declarative

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  install.md  quickstart.md
docs/concepts/: architecture.md  descriptor_anatomy.md  hid_primer.md
docs/how-to/: dump_linux.md
docs/learn/embedded/: export_c.md
docs/learn/maker/: mouse.md
docs/reference/: python_api.md  runtime.md  spec_items.md
examples/profiles/: composite_multimedia.py  mouse_simple.py  raw_device.py  t16000m_demo.py  test.py
src/hid_declarative/: __init__.py  compiler.py  exceptions.py  loader.py  parser.py  profile.py  result.py  utils.py
src/hid_declarative/cli/: __init__.py  io.py  utils.py
src/hid_declarative/cli/commands/: compile.py  decode.py  dump.py  encode.py  inspect.py  list.py  live.py
src/hid_declarative/codegen/: __init__.py
src/hid_declarative/codegen/backends/: __init__.py
src/hid_declarative/exporters/: __init__.py
src/hid_declarative/runtime/: __init__.py  analyzer.py  codec.py  context.py  layout.py  reports.py
src/hid_declarative/schema/: __init__.py  nodes.py  widgets.py
src/hid_declarative/spec/: __init__.py  descriptor.py  enums.py  items.py  lookup.py  tags.py  usb.py
src/hid_declarative/spec/tables/: __init__.py  button.py  consumer.py  generic_desktop.py  keyboard.py  led.py
src/hid_declarative/tools/: device.py  monitor.py
tests/integration/: test_cli.py
tests/unit/: test_compiler.py  test_loader.py  test_parser.py  test_utils.py
tests/unit/cli/: test_utils.py
tests/unit/runtime/: test_analyzer.py  test_codec.py  test_layout.py  test_report.py
tests/unit/spec/: test_items.py  test_lookup.py  test_usb.py
tests/unit/tools/: test_monitor.py
