[project]
name = "hid-declarative"
version = "0.1.0"
description = "Modern, pure Python stack for USB HID: Declarative schemas, optimized compilation, and zero-dependency runtime codec."
authors = [
    { name = "Guillaume Pineda", email = "gpineda-dev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "usb", "hid", "human interface device", "protocol", "embedded", 
    "declarative", "compiler", "codec", "parser", "gadget"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Embedded Systems",
    "Typing :: Typed",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.urls]
Homepage = "https://github.com/gpineda-dev/py-hid-declarative"
Repository = "https://github.com/gpineda-dev/py-hid-declarative"
Issues = "https://github.com/gpineda-dev/py-hid-declarative/issues"
Documentation = "https://gpineda-dev.github.io/py-hid-declarative"

# --- CLI Configuration ---
[project.scripts]
hid-declarative = "hid_declarative.cli:main"

# --- Optional Dependencies (Extras) ---
[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
hidapi = [
    "hidapi>=0.14.0",
]

# --- Build System (Standard moderne avec uv) ---
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",   # Linter
    "mypy>=1.0.0",   # Typage
]

docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "termynal>=0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hid_declarative"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]